添加 订单推送及修改拉取详情无商品信息的bug

--- a/pom.xml
+++ b/pom.xml
@@ -206,50 +206,52 @@
 			<artifactId>jpush-client</artifactId>
 			<version>3.2.9</version>
 		</dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.google.code.gson</groupId>-->
-            <!--<artifactId>gson</artifactId>-->
-            <!--<version>2.2.4</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.slf4j</groupId>-->
-            <!--<artifactId>slf4j-api</artifactId>-->
-            <!--<version>1.7.5</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.slf4j</groupId>-->
-            <!--<artifactId>slf4j-log4j12</artifactId>-->
-            <!--<version>1.7.5</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>log4j</groupId>-->
-            <!--<artifactId>log4j</artifactId>-->
-            <!--<version>1.2.16</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>junit</groupId>-->
-            <!--<artifactId>junit</artifactId>-->
-            <!--<version>4.11</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.google.guava</groupId>-->
-            <!--<artifactId>guava</artifactId>-->
-            <!--<version>17.0</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.squareup.okhttp</groupId>-->
-            <!--<artifactId>mockwebserver</artifactId>-->
-            <!--<version>1.5.4</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>17.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>1.5.4</version>
+            <scope>test</scope>
+        </dependency>
 
 	</dependencies>
 
 	<profiles>
 	<profile>
 			<id>release-test</id>
-
+		<activation>
+			<activeByDefault>true</activeByDefault><!--默认启用的是dev环境配置 -->
+		</activation>
 			<properties>
 				<fileURLWithoutHttp>7rfleo.com1.z0.glb.clouddn.com</fileURLWithoutHttp>
 				<bucket>gotye</bucket>
@@ -289,9 +291,7 @@
 		</profile>
 		<profile>
 			<id>release-baihuo</id>
-            <activation>
-                <activeByDefault>true</activeByDefault><!--默认启用的是dev环境配置 -->
-            </activation>
+
 			<properties>
 				<fileURLWithoutHttp>7xp0dt.com2.z0.glb.qiniucdn.com</fileURLWithoutHttp>
 				<bucket>baihuo</bucket>
