--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,7 +3,7 @@ driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
 jdbc_url=jdbc:mysql://jiafangjiafang.mysql.rds.aliyuncs.com:3307/${jdbc_name}?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc_username=jiafang
-jdbc_password=123456
+jdbc_password=Xlh!123!
 
 #jndiName=java:comp/env/dataSourceName
 hibernate.hbm2ddl.auto=update
